apps/libreddit/libreddit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreddit
  namespace: default
  labels:
    app: libreddit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libreddit
  template:
    metadata:
      labels:
        app: libreddit
    spec:
      containers:
      - name: libreddit
        image: libreddit/libreddit
        ports:
        - containerPort: 8080
        securityContext:
          readOnlyRootFilesystem: true
          runAsGroup: 10010
          runAsNonRoot: true
          runAsUser: 10010
          allowPrivilegeEscalation: false
          capabilities: 
            drop: 
            - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: libreddit-svc
  namespace: default
spec:
  selector:
    app: libreddit
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
