apps/libreddit/libreddit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit-ingress
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: nohost-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: libreddit.nohost.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: libreddit-svc
            port:
              number: 80
  tls:
  - hosts:
    - libreddit.nohost.network
    secretName: libreddit-cert
